# canapp

./: .env  .gitignore  __init__.py  data_object.py  data_object1.py  pyproject.toml  setup.cfg
src/canapp/: ChannelsTab.py  CustomReplayPanel.py  DBC_panel.py  FileLogViewPanel.py  FiltersPanel.py  InspectorPanel.py  SignalFilterPanel.py  SignalGraphPanel.py  TreeLogEditView.py  WorkspaceContainer.py  WorkspaceTab.py  main.py  version.py
src/canapp/icon.from_screens/: icon.py
src/canapp/pyqt/: ChannelFilterCheckList.py  DBCCombobox.py  DlcRawBinder.py  MessageFilterCheckList.py  MessageFilterTable.py  ParseableEditBox.py  RawValueSpinbox.py  SignalChoiceCombobox.py  SignalEditBox.py  SignalGraph.py  SignalGraphContainer.py  TreeLogLazyLoad.py  TreeLogMessage.py  TreeLogMessageSignals.py  TreeLogPageTable.py  TreeLogVirtualWindow.py  TreeLogWithContext.py  TreeMonitorTable.py  TreeSenderTable.py
src/canapp/screens/: CenterContextPane.py  ChannelsTab.py  CustomSendMessagePanel.py  DBC_panel copy.py  FileLogViewPanel.py  MessageFilterPanel.py  MonitorLogViewPanel.py  ultility.py
src/canapp/vm/: __init__.py  base_view_model.py  channel_view_model.py  dbc_view_model.py  gateway_view_model.py  log_viewmodel.py  main_window_view_model.py  record_viewmodel.py  replay_view_model.py  schedule_view_model.py
src/canapp/widgets/: ChannelComboBox.py  DLCSpinbox.py  FilterTimeScopeSlider.py  LogViewTable copy.py  MessageCombobox.py  ReplayMessageFilterCheckList.py  SigFilterTable.py  (+9 more)
test/: __init__.py
test/function_test/: test_prs.py
test/screen_test/: test_log_screen.py
(+10 files in other folders)
