[metadata]
name = canapp
version = 0.1.0
description = CAN Analyzer application UI package
long_description = file: README.md
long_description_content_type = text/markdown
author = 
license = MIT

[options]
packages =
	canapp
include_package_data = True
zip_safe = False

package_dir =
    canapp = .
